z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,7 @@ p {
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   padding: 40px 40px;
-  z-index: 10;
+  z-index: 12;
 }
 @media screen and (max-width: 1199px) {
   .modal {
